Updated the header to fix the visibility issue on mobile.

--- a/devwp/sass/navigation/_header.scss
+++ b/devwp/sass/navigation/_header.scss
@@ -1,16 +1,33 @@
+/**
+ * Header
+ * =================================
+ *
+ *
+ *
+ */
+
+
+//*********************************************
+//***************** HEADER ********************
+//*********************************************
+
 .topnav {
   overflow: hidden;
-  font-family: $main-font;
-  text-transform: uppercase;
+  background-color: $charcoal;
   // To remove sticky feature delete the code after this point
+}
 
+@media screen and (min-width: 830px) {
+  .topnav {
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
 
 
 .topnav a {
   float: left;
   display: inline;
-  color: $background;
+  color: #f2f2f2;
   text-align: center;
   padding: 30px 20px 15px 20px;
   text-decoration: none;
@@ -22,9 +39,12 @@
 }
 
 
-//all the mobile fixes are right here
+//*********************************************
+//************** MOBILE FIXES *****************
+//*********************************************
 @media screen and (max-width: 830px) {
 
+  // not going to lie, named this, forgot about it, and now i'm keeping it.
   .pushypushy {
     float: none;
   }
@@ -34,13 +54,14 @@
   }
 
 }
-//end mobile fixes
 
 @media screen and (max-width: 830px) {
   .dropdown .dropbtn, .topnav .pushypushy a {
     display: none;
   }
 }
+//end mobile fixes
+
 
 .topnav .logo {
   float: left;
@@ -52,7 +73,6 @@
 }
 
 .active {
-  background-color: #4CAF50;
   color: white;
 }
 
@@ -73,6 +93,7 @@
   color: white;
   padding: 34px 20px 11px 20px;
   background-color: inherit;
+  font-family: inherit;
   margin: 0;
 }
 
@@ -81,7 +102,7 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -95,7 +116,7 @@
 }
 
 .topnav a:hover, .dropdown:hover .dropbtn {
-  color: rgba(255,255,255,.7);
+  color: rgba(255, 255, 255, .7);
 }
 
 .dropdown-content a:hover {
@@ -106,6 +127,10 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+//*********************************************
+//**** MOBILE FIXES 2: ELECTRIC BOOGALOO ******
+//*********************************************
 
 @media screen and (max-width: 830px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
@@ -120,7 +145,9 @@
 }
 
 @media screen and (max-width: 830px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    // position: absolute; if you want page content to move down with dropdown, set this to relative.
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -131,16 +158,18 @@
     display: block;
     text-align: left;
   }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown-content {
+    position: absolute; // if you want page content to move down with dropdown, set this to relative.
+  }
   .topnav.responsive .dropdown .dropbtn {
     display: block;
     width: 100%;
     text-align: left;
   }
 }
-
-
 
 @media screen and (max-width: 39.9375em) {
   .topnav a {
@@ -159,9 +188,9 @@
     margin-top: 10px;
   }
 
-.responsive .pushypushy ul li:first-of-type {
-  margin-top: 80px;
-}
+  .responsive .pushypushy ul li:first-of-type {
+    margin-top: 80px;
+  }
 
   .menu {
     display: block;
@@ -170,9 +199,3 @@
 }
 
 
-
-@media screen and (max-width: 39.9375em) {
-  .site-title {
-    display: none;
-  }
-}
